2004-08-01 Gustaf.Neumann@wu-wien.ac.at
        * yet another fixed access to freed memory (when the configure
          method returned a non numerical value, which was tried to be
          converted into a number; setting refcounts properly helped.
          (thanks to Zoran for his help with Purify )
        * minor code cleanup
        * test with tcl 8.4.7

2004-07-29 Gustaf.Neumann@wu-wien.ac.at
        * changes to forward and instforward: 
            + %some-command executes some-command at invocation time and 
              substitutes result
            + substitution extended to all arguments (also on callee)
        
2004-07-28 Gustaf.Neumann@wu-wien.ac.at
        * yet another fixed access to freed memory 
          (thanks to Zoran for his help with Purify )

2004-07-26 Gustaf.Neumann@wu-wien.ac.at
        * fixed bug in filters in connection with instmixin; 
          inactive tcl callstack frame was dereferenced. This fixed as well 
          a potential uplevel bug
        * fixed access to freed memory (thanks to Zoran for his help with Purify )

2004-07-23 Gustaf.Neumann@wu-wien.ac.at
        * implemented expermental next method for delegating same-named procs
          to different objects

2004-07-20 Gustaf.Neumann@wu-wien.ac.at
        * fixed a potential crash when a instmixin was registered on itself

2004-07-19  Uwe Zdun <uwe.zdun@wu-wien.ac.at>
        * added checkoptions to non pos args
        * added tests & documentation of non pos args

2004-07-18 jim@jam.sessionsnet.org
        * Added file autogen.sh, to generate all configure files
        * Added file autoclean.sh, to clean whole source tree, incl. configure

2004-07-18 Gustaf.Neumann@wu-wien.ac.at
        * added removal of autom4te.cache to distclean
        * make doc added to "all" target
        * autogenerated html docs are removed in a make clean
        * remove all *~ files in directory tree via find (ok with TEA3?)

2004-07-11 jim@jam.sessionsnet.org